회원가입 구현 중

--- a/src/main/webapp/css/default.css
+++ b/src/main/webapp/css/default.css
@@ -74,3 +74,11 @@ ul > li > a{
 .width-100p{
 	width : 100%;
 }
+#txt_can,#txt_you, #txt_etc{
+	display: inline-block;
+}
+
+
+main{
+	min-height : 80vh;
+}
