--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -6,7 +6,7 @@
 }
 
 .header .header_logo {
-	width: 20%;
+	width: 420px;
 }
 
 .header_logo>a {
@@ -14,11 +14,11 @@
 }
 
 .head_empty {
-	width: 40%;
+	width: 20%;
 }
 
 .header .menuItem {
-	width: 40%;
+	width: calc(50% + 420px);
 	font-size: 14px;
 }
 
@@ -69,23 +69,109 @@
 	margin-top: 3px;
 }
 
-.header ul li {
+.header .menuItem-PC ul li {
 	transition: all 0.4s;
 }
 
-.header ul li:not(:last-child ):hover {
+.header .menuItem-PC ul li:not(:last-child ):hover {
 	background-color: rgba(1, 1, 1, 0.2);
 }
 
 .header_logo:hover .head_main {
 	opacity: 0;
 }
+#txt_que{
+	display:inline-block;
+	transition : all 0.4s;
+}
+.header_logo:hover #txt_que {
+	opacity: 0;
+}
+#txt_exclam{
+	display:none;
+}
+
+/* 헤더 모바일 시작 */
+@media (max-width: 1150px){
+	
+}
+@media (max-width: 850px){
+	.header_logo:hover .head_main {
+		opacity: 1;
+	}
+}
+/* 헤더 모바일 끝 */
+
 /* 헤더 끝 */
+
+/* 라이트 바 시작 */
+.menuItem-mobile{
+	position : fixed;
+	width : 0;
+	height : 100%;
+	right : 0;
+	top : 75px;
+	transition : all 0.4s;
+	background-color : #2d2d2f;
+	z-index : 2;
+	display : none;
+}
+.btn_hamburger{
+	margin-right : 10px;
+	font-size : 30px;
+	display : none;
+}
+@media (max-width: 1175px){
+	.menuItem-mobile{
+		display : block;
+	}
+	.btn_hamburger{
+		display : block;
+	}
+	.btn_hamburger div {
+		width : 40px;
+		height : 25px;
+		cursor : pointer;
+	}
+	.btn_hamburger div span{
+		width : 40px;
+		height : 4px;
+		margin-bottom : 6px;
+		background-color : black;
+		display : inline-block;
+		transition : all 0.4s;
+		position : relative;
+	}
+	.btn_hamburger div.active span:first-child{
+		transform : rotate(45deg) translateY(7px);
+		
+	}
+	.btn_hamburger div.active span:last-child{
+		transform : rotate(-45deg) translateY(-7px);
+	}
+	.btn_hamburger{
+		display : flex;
+	}
+	.menuItem-mobile ul li {
+		color : white;
+		border-bottom : 1px solid #dfdfdf;
+		text-align: left;
+		margin-left : 30px;
+	}
+	.menuItem-mobile.active{
+		width : 100%
+	}
+}
+@media (max-width: 800px){
+
+}
+/* 헤더 모바일 끝 */
+
+/* 라이트 바 끝 */
 
 /* 메인 시작 */
 .join_box{
 	margin : 0 auto;
-	background-color : #606669;
 	width : 700px;
 	padding : 25px 0;
 }
@@ -98,7 +184,7 @@ label {
 label .label-text {
   color: #9B9B9B;
   cursor: text;
-  font-size: 15px;
+  font-size: 13px;
   line-height: 20px;
   text-transform: uppercase;
   -moz-transform: translateY(-34px);
@@ -109,7 +195,7 @@ label .label-text {
 }
 /* animation for the text to float up and turn white */
 label input:focus + .label-text {
-  color: yellow;
+  color: black;
   font-size: 13px;
   margin-top: 10px;
   -moz-transform: translateY(-60x);
@@ -121,7 +207,7 @@ label input {
   background-color: transparent;
   border: 0;
   border-bottom: 2px solid #4A4A4A;
-  color: white;
+  color: black;
   font-size: 20px;
   letter-spacing: 1px;
   outline: 0;
@@ -143,9 +229,9 @@ label input:valid + .label-text {
   transform: translateY(-74px);
 }
 .join_box button {
-  background: transparent;
-  color: #F0F0F0;
-  border: 2px solid #F0F0F0;
+  background: black;
+  color: white;
+  border: 3px solid #5F5F5F;
   font-size: 15px;
   letter-spacing: 2px;
   padding: 20px 75px;
@@ -167,4 +253,44 @@ label input:valid + .label-text {
 .btn_join-box{
 	text-align : center;
 }
+
+/* 메인 모바일 시작 */
+@media (max-width:800px){
+	.join_box{
+		width: 400px;
+	}
+	label input:focus {
+	  max-width: 100%;
+	  width: 300px;
+	}
+}
+@media (max-width:500px){
+	.join_box{
+		width: 300px;
+	}
+	label input {
+		width : 150px;
+	}
+	label input:focus {
+	  max-width: 100%;
+	  width: 200px;
+	}
+}
+@media (max-width:280px){
+	.join_box{
+		width: 100%;
+	}
+	label input {
+		width : 50%;
+	}
+	label input:focus {
+	  max-width: 100%;
+	  width: 80%;
+	}
+	.join_box button{
+		padding: 20px 65px;
+	}
+}
+/* 메인 모바일 끝 */
+
 /* 메인 끝 */
