--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -429,6 +429,18 @@ label input:valid + .label-text {
 	width : 100%;
 	cursor : pointer;
 }
+.showPassword{
+	z-index : 1;
+	width : 20px;
+	height : 30px;
+	position : absolute;
+}
+#member_pw.active + div > .showPassword {
+	color : black;
+}
+#member_pw + div > .showPassword {
+	color : #9B9B9B;
+}
 section.login_alert {
     margin-bottom: 40px;
     text-align: center;
@@ -442,6 +454,31 @@ section.login_alert {
 	label input:focus {
 	  max-width: 100%;
 	  width: 300px;
+	}
+	.login_btn_box{
+		flex-direction: column;
+		justify-content: center;
+		align-items: center;
+		margin-top : 35px;
+	}
+	.fBox_2{
+		flex-direction: column;
+		width : 100%;
+	}
+	.fBox_2 > div{
+		width : 100%;
+	}
+	.login_btn_box > div{
+		padding : 10px 0;
+	}
+	.login_btn_box > div:not(:last-child){
+		margin-bottom : 25px;
+	}
+	.profile_img{
+		display : none;
+	}
+	.emailNameBox{
+		margin-left : 0 !important;
 	}
 }
 @media (max-width:500px){
@@ -474,3 +511,85 @@ section.login_alert {
 /* 메인 모바일 끝 */
 
 /* 메인 끝 */
+
+/* 마이페이지 시작 */
+.profile_box{
+	width : 60%;
+	border : 1px solid #368f79;
+	border-radius: 10px;
+	margin : 0 auto; 
+	margin-bottom : 15px;
+}
+.profile_box > div {
+	margin-left : 10px;
+}
+.profile_box .profile_title{
+	font-size: 23px;
+	border-bottom : 1px solid #368f79;
+	margin-left : 0;
+	padding : 10px 0;
+}
+.profile_box .profile_title span{
+	margin-left : 10px;
+}
+.profile_content {
+	padding: 15px;
+}
+.profile_box .profile_img{
+	width : 25%;
+	height : 100%;
+}
+.img_box img{
+	display: block;
+	width : 100%;
+	border-radius: 50%;
+}
+.emailNameBox{
+	margin-left : 100px;
+}
+.profile_name{
+	font-size : 20px;
+	font-weight: bold;
+}
+.emailNameBox > div {
+	padding : 10px 0;
+}
+.profile_opt{
+	width : 100%;
+}
+.profile_opt span{
+	width: 20%;
+	display : inline-block;
+}
+.profile_changBtn{
+	margin-bottom : 30px;
+	margin-right : 15px;
+	text-align : right;	
+}
+.btn_2{
+	display : flex;
+	justify-content: flex-end;
+}
+.btn_2 > button{
+	width : 80px;
+	padding : 15px 0;
+	margin : 0 15px;
+	border : none;
+	background-color : #dfdfdf;
+	border-radius: 10px;
+	transition : all 0.3s;
+}
+.btn_2 > button:last-child{
+	background-color : #7589eb;
+	color : white;
+	transition : all 0.3s;
+}
+.btn_2 > button:first-child:hover {
+	background-color : #5f5f5f;
+	color : white;
+}
+.btn_2 > button:last-child:hover {
+	background-color : #3547eb;
+	color : white;
+}
+/* 마이페이지 끝 */
