--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -1,595 +1,44 @@
 @charset "UTF-8";
 
 /* 헤더 시작 */
-.header {
-	height: 70px;
+body{
+	height : 200vh;
 }
-
-.header .header_logo {
-	width: 420px;
+header{
+	background-color : #FDF8FF;
+	height : 60px;
 }
-
-.header_logo>a {
-	margin-left: 15px;
-}
-
-.head_empty {
-	width: 20%;
-}
-
-.header .menuItem {
-	width: calc(50% + 420px);
-	font-size: 14px;
-}
-
-.head_main {
-	transition: opacity 0.3s;
-}
-
-.header .menuItem > ul {
-	display: flex;
-	height: 100%;
-	justify-content: space-around;
-	align-items: center;
-}
-
-.head_main {
-	font-size: 24px;
-	font-weight: bold;
-	margin-left: 15px;
-}
-
-.head_sub {
-	font-size: 17px;
-	margin-left: 28px;
-}
-
-.header_btn-member .login_btn_cover {
-	margin-bottom: 3px;
-}
-
-.header_btn-member div {
-	width: 100%;
-}
-
-.header_btn-member div a {
-	width: 50%;
-	padding: 5px 10px;
-	border-radius: 15px;
-	display: block;
-	margin: 0 auto;
-	transition: all 0.4s;
-}
-
-.header_btn-member div a:hover {
-	background-color: rgba(1, 1, 1, 0.2);
-}
-
-.header_btn-member .join_btn_cover {
-	margin-top: 3px;
-}
-
-.header .menuItem-PC ul li {
-	transition: all 0.4s;
-	position : relative;
-}
-li.menu_line {
-    width: 1px;
-    height: 30%;
-    background-color: black;
-    transition : height 0.4s;
-}
-.header .menuItem-PC .depth_1 li:not(:last-child ):hover {
-	background-color: rgba(1, 1, 1, 0.2);
-}
-
-.header_logo:hover .head_main {
-	opacity: 0;
-}
-#txt_que{
-	display:inline-block;
-	transition : all 0.4s;
-}
-.header_logo:hover #txt_que {
-	opacity: 0;
-}
-#txt_exclam{
-	display:none;
-}
-
-/* 헤더 모바일 시작 */
-@media (max-width: 1150px){
-	.menuItem-mobile_btn{
-		margin-top : 30px;
-	}
-	.menuItem-mobile_btn div{
-		width : 40%;
-		text-align : center;
-		height : 50px;
-		border-radius: 20px;
-		margin : 0 5%;
-		display : flex;
-		align-items: center;
-		font-size : 17px;
-		justify-content: center;
-	}
-	.menuItem-mobile_btn div:first-child{
-		background-color : #bfd9c5;
-	}
-	.menuItem-mobile_btn div:last-child{
-		background-color : #bfd0d9;
-	}
-	.menuItem-mobile_btn a {
-		width : 100%;
-		padding : 15px 0;
-		color : white;
-		display : block;
-	}
-}
-@media (max-width: 850px){
-	.header_logo:hover .head_main {
-		opacity: 1;
-	}
-}
-@media (max-width: 560px){
-	.menuItem-mobile_btn{
-		flex-direction: column;
-	}
-	.menuItem-mobile_btn div{
-		width : 70%;
-		margin : 20px auto;
-		text-align : center;
-		height : 60px;
-		font-size : 20px;
-		border-radius: 20px;
-		display : flex;
-		align-items: center;
-		justify-content: center;
-	}
-}
-/* 헤더 모바일 끝 */
-/* 헤더 끝 */
-
-/* 2차 메뉴 시작 */
-.depth_2{
-	background-color : #dfdfdf;
-	z-index : 999;
-	position : relative;
-	height : 200px;
-	display : none;
-}
-.depth_2 > ul {
-	width : 100%;
-	position : relative;
-	transition : background-color 0.4s;
-}
-.depth_2 > ul:after{
-	content : "";
-	height : 70%;
-	width : 1px;
-	background-color : black;
-	position : absolute;
-	right : 0;
-	top: 50%;
-	transform : translateY(-50%);
-}
-.depth_2 > ul > li {
-	height : 25%;
-}
-.depth_2 > ul > li > a {
-	transition : background-color 0.4s, color 0.4s, opacity 0.2s;
-	box-sizing: border-box;
-	padding : 15px 0;
-}
-.depth_2 > ul:hover{
-	background-color : rgba(1,1,1,0.2);
-}
-.depth_2 > ul > li:hover a{
-	background-color : rgba(1,1,1,0.5);
-	color : #efefef;
-}
-/* 2차 메뉴 끝 */
-
-/* 라이트 바 시작 */
-.menuItem-mobile{
-	position : fixed;
-	width : 0;
-	height : 100%;
-	right : 0;
-	top : 75px;
-	transition : all 0.4s;
-	background-color : #2d2d2f;
-	z-index : 2;
-	display : none;
-}
-.btn_hamburger{
-	margin-right : 10px;
-	font-size : 30px;
-	display : none;
-}
-@media (min-width : 240px) and (max-width : 1175px){
-	.menuItem-mobile_bar{
-		display : flex;
-		width : 100%;
-		align-items: end;
-    	height: 40%;
-	}
-	.menuItem-mobile_bar div{
-		width : 50%;
-		text-align: center;
-	}
-	.menuItem-mobile_bar div a{
-		color : #ffffff;
-	}
-	
-}
-@media (max-width: 1175px){
-	.menuItem-mobile{
-		display : block;
-	}
-	.btn_hamburger{
-		display : block;
-	}
-	.btn_hamburger div {
-		width : 40px;
-		height : 25px;
-		cursor : pointer;
-	}
-	.btn_hamburger div span{
-		width : 40px;
-		height : 4px;
-		margin-bottom : 6px;
-		background-color : black;
-		display : inline-block;
-		transition : all 0.4s;
-		position : relative;
-	}
-	.btn_hamburger div.active span:first-child{
-		transform : rotate(45deg) translateY(10px) translateX(2px);
-		
-	}
-	.btn_hamburger div.active span:last-child{
-		transform : rotate(-45deg) translateY(-6px) translateX(-3px);
-	}
-	.btn_hamburger{
-		display : flex;
-	}
-	.menuItem-mobile ul li {
-		color : white;
-		border-bottom : 1px solid #dfdfdf;
-		text-align: left;
-		margin-left : 30px;
-	}
-	.menuItem-mobile.active{
-		width : 100%
-	}
-}
-@media (max-width: 800px){
-
-}
-/* 헤더 모바일 끝 */
-
-/* 라이트 바 끝 */
-
-/* 메인 시작 */
-.join_box{
+.header_container{
+	max-width : 1280px;
 	margin : 0 auto;
-	width : 700px;
-	padding : 25px 0;
 }
-label {
-  display: block;
-  letter-spacing: 4px;
-  padding-top: 30px;
-  text-align: center;
+.header_min_container{
+	min-width : 300px;
 }
-label .label-text {
-  color: #9B9B9B;
-  cursor: text;
-  font-size: 13px;
-  line-height: 20px;
-  text-transform: uppercase;
-  -moz-transform: translateY(-34px);
-  -ms-transform: translateY(-34px);
-  -webkit-transform: translateY(-34px);
-  transform: translateY(-34px);
-  transition: all 0.3s;
-}
-/* animation for the text to float up and turn white */
-label input:focus + .label-text {
-  color: black;
-  font-size: 13px;
-  margin-top: 10px;
-  -moz-transform: translateY(-60x);
-  -ms-transform: translateY(-60px);
-  -webkit-transform: translateY(-60px);
-  transform: translateY(-60px);
-}
-label input {
-  background-color: transparent;
-  border: 0;
-  border-bottom: 2px solid #4A4A4A;
-  color: black;
-  font-size: 17px;
-  letter-spacing: 1px;
-  outline: 0;
-  padding: 5px 20px;
-  text-align: center;
-  transition: all 0.3s;
-  width: 230px;
-}
-/* once you click in the input the input width box animates */
-label input:focus {
-  max-width: 100%;
-  width: 400px;
-}
-label input:valid + .label-text {
-  font-size: 13px;
-  -moz-transform: translateY(-74px);
-  -ms-transform: translateY(-74px);
-  -webkit-transform: translateY(-74px);
-  transform: translateY(-74px);
-}
-.join_box button {
-  background: black;
-  color: white;
-  border: 3px solid #5F5F5F;
-  font-size: 15px;
-  letter-spacing: 2px;
-  padding: 20px 75px;
-  text-transform: uppercase;
-  cursor: pointer;
-  display: inline-block;
-  margin: 15px 30px;
-  -webkit-transition: all 0.4s;
- -moz-transition: all 0.4s;
- transition: all 0.4s;
-}
-.join_box button:hover,.join_box button:focus {
-  background-color: white;
-  color: #333333;
-}
-.join_box > form > label:last-child {
-	margin-bottom : 20px;
-}
-.btn_join-box{
-	text-align : center;
-}
-.login_input_box{
-	height : 200px;
-}
-.login_btn_box{
-	width : 600px;
-	height : 50px;
-}
-.login_btn_box > div{
-	width : 30%;
-	text-align : center;
-	height : 100%;
-	border-radius: 20px;
-	transition : background-color 0.4s;
-}
-.login_btn_box > div > button{
-	color : white;
-	transition : 0.3;
-}
-.btn_login-box{
-	background-color : #2d2d2d;
-}
-.btn_login-box:hover{
-	background-color : #6d6d6d;
-}
-.login_btn_join-box{
-	background-color : #4f4f4f;
-	color : black;
-}
-.login_btn_join-box:hover{
-	background-color : #afafaf;
-}
-
-.btn_return_box{
-	text-align : center;
-}
-.btn_return_box .btn_return{
-	background: #2d2d2d;
-    color: white;
-    border: 3px solid #5F5F5F;
-    font-size: 15px;
-    letter-spacing: 2px;
-    padding: 20px 75px;
-    text-transform: uppercase;
-    cursor: pointer;
-    display: inline-block;
-    margin: 15px 30px;
-    -webkit-transition: all 0.4s;
-    -moz-transition: all 0.4s;
-    transition: all 0.4s;
-}
-.login_btn_join-box:hover button{
-	color : black;
-}
-.btn_return_box:hover .btn_return{
-	background-color : #6d6d6d;
-}
-.btn_find-box {
-    background-color: #5e5e44;
-}
-.btn_find-box:hover {
-    background-color: #9f9f44;
-}
-.btn_find-box button {
-    color: white;
-}
-.login_btn_box button{
-	background-color : transparent;
-	font-size : 16px;
-	outline : none;
-	border : none;
-	height : 100%;
+.header {
 	width : 100%;
-	cursor : pointer;
 }
-.showPassword{
-	z-index : 1;
-	width : 20px;
-	height : 30px;
-	position : absolute;
-}
-#member_pw.active + div > .showPassword {
-	color : black;
-}
-#member_pw + div > .showPassword {
-	color : #9B9B9B;
-}
-section.login_alert {
-    margin-bottom: 40px;
-    text-align: center;
-    color: red;
-}
-/* 메인 모바일 시작 */
-@media (max-width:800px){
-	.join_box{
-		width: 400px;
-	}
-	label input:focus {
-	  max-width: 100%;
-	  width: 300px;
-	}
-	.login_btn_box{
-		flex-direction: column;
-		justify-content: center;
-		align-items: center;
-		margin-top : 35px;
-	}
-	.fBox_2{
-		flex-direction: column;
-		width : 100%;
-	}
-	.fBox_2 > div{
-		width : 100%;
-	}
-	.login_btn_box > div{
-		padding : 10px 0;
-	}
-	.login_btn_box > div:not(:last-child){
-		margin-bottom : 25px;
-	}
-	.profile_img{
-		display : none;
-	}
-	.emailNameBox{
-		margin-left : 0 !important;
-	}
-}
-@media (max-width:500px){
-	.join_box{
-		width: 300px;
-	}
-	label input {
-		width : 150px;
-	}
-	label input:focus {
-	  max-width: 100%;
-	  width: 200px;
-	}
-}
-@media (max-width:280px){
-	.join_box{
-		width: 100%;
-	}
-	label input {
-		width : 50%;
-	}
-	label input:focus {
-	  max-width: 100%;
-	  width: 80%;
-	}
-	.join_box button{
-		padding: 20px 65px;
-	}
-}
-/* 메인 모바일 끝 */
-
-/* 메인 끝 */
-
-/* 마이페이지 시작 */
-.profile_box{
-	width : 60%;
-	border : 1px solid #368f79;
-	border-radius: 10px;
-	margin : 0 auto; 
-	margin-bottom : 15px;
-}
-.profile_box > div {
-	margin-left : 10px;
-}
-.profile_box .profile_title{
-	font-size: 23px;
-	border-bottom : 1px solid #368f79;
-	margin-left : 0;
-	padding : 10px 0;
-}
-.profile_box .profile_title span{
-	margin-left : 10px;
-}
-.profile_content {
-	padding: 15px;
-}
-.profile_box .profile_img{
+.header > .header_logo_title{
 	width : 25%;
-	height : 100%;
 }
-.img_box img{
-	display: block;
-	width : 100%;
-	border-radius: 50%;
+.header > .header_menu{
+	width : 55%;
+	margin-left : 5%;
 }
-.emailNameBox{
-	margin-left : 100px;
+.header_logo_title{
+	width : 200px;
 }
-.profile_name{
-	font-size : 20px;
-	font-weight: bold;
+.header_logo_title .logo{
+	color : #C6B6D5;	
 }
-.emailNameBox > div {
-	padding : 10px 0;
-}
-.profile_opt{
+.header > .header_menu > ul{
 	width : 100%;
 }
-.profile_opt span{
-	width: 20%;
-	display : inline-block;
+.header > .header_sns {
+	width : 15%;
+	margin-left : 10%;
 }
-.profile_changBtn{
-	margin-bottom : 30px;
-	margin-right : 15px;
-	text-align : right;	
+.header > .header_sns > ul{
+	width : 100%;
 }
-.btn_2{
-	display : flex;
-	justify-content: flex-end;
-}
-.btn_2 > button{
-	width : 80px;
-	padding : 15px 0;
-	margin : 0 15px;
-	border : none;
-	background-color : #dfdfdf;
-	border-radius: 10px;
-	transition : all 0.3s;
-}
-.btn_2 > button:last-child{
-	background-color : #7589eb;
-	color : white;
-	transition : all 0.3s;
-}
-.btn_2 > button:first-child:hover {
-	background-color : #5f5f5f;
-	color : white;
-}
-.btn_2 > button:last-child:hover {
-	background-color : #3547eb;
-	color : white;
-}
-/* 마이페이지 끝 */
+/* 헤더 끝 */
