--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -1,11 +1,27 @@
 @charset "UTF-8";
+/* 폰트 시작 */
+@font-face {
+    font-family: 'twayair';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_tway@1.0/twayair.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'yg-jalnan';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_four@1.2/JalnanOTF00.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+/* 폰트 끝 */
 
 /* 헤더 시작 */
 body{
-	height : 200vh;
+	
 }
 header{
 	background-color : #FDF8FF;
+	opacity: 0.6;
 	height : 60px;
 }
 .header_container{
@@ -19,6 +35,7 @@ header{
 	width : 100%;
 }
 .header > .header_logo_title{
+	font-family: 'twayair';
 	width : 25%;
 }
 .header > .header_menu{
@@ -34,6 +51,15 @@ header{
 .header > .header_menu > ul{
 	width : 100%;
 }
+.header > .header_menu > ul > li{
+	font-family: 'twayair';
+	transition : background-color 0.3s, color 0.3s;
+	font-size : 19px;
+}
+.header > .header_menu > ul > li > a{
+	color : black;
+	transition : color 0.3s;
+}
 .header > .header_sns {
 	width : 15%;
 	margin-left : 10%;
@@ -41,4 +67,141 @@ header{
 .header > .header_sns > ul{
 	width : 100%;
 }
+.header_menu > ul > li:hover {
+	background-color : #5f5f5f;
+}
+.header_menu > ul > li:hover > a{
+	color : #dbedad;
+}
+.header_sns > ul > li > a{
+	font-size : 25px;
+}
+.header_sns > ul > li:first-child:hover > a{
+	color : #b8af0f;
+}
+.header_sns > ul > li:last-child:hover > a{
+	color : #d929c4;
+}
+.header_mobile {
+	display : none;
+}
+
+/* 헤더 반응형 시작 */
+.header_hamburger{
+	position : relative;
+	margin-right : 20px;
+	flex-direction: column;
+	justify-content: center;
+	cursor : pointer;
+}
+.header_hamburger > div{
+	width : 30px;
+	height : 4px;
+	background-color : black;
+	margin-top : 5px;
+}
+@media (max-width : 1200px){
+	.header_logo_title{
+		margin-left : 20px;
+	}	
+}
+@media (max-width : 1000px){
+	.header_pc {
+		display: none;
+	}
+	.header_mobile {
+		display : block;
+	}
+	.header_mobile.header_hamburger{
+		display : flex;
+	}
+}
+/* 헤더 반응형 끝 */
+
 /* 헤더 끝 */
+
+/* 메인 시작 */
+.main_wrapper{
+	background-image : url("/images/eyebrow1.jpg");
+	background-position: center center;
+	background-size: 100%;
+	background-repeat: no-repeat;
+	background-attachment: fixed;
+	height : calc(100vh - 60px);
+}
+
+.center_title{
+	font-family: 'yg-jalnan';
+	height : 70%;
+	display : flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
+	transition : height 0.3s;
+}
+.center_title > h1 {
+	font-size : 100px;
+	color : #df9f9f;
+	transition : font-size 0.3s;
+}
+.center_title > h1:first-child {
+	margin-bottom : 20px;
+}
+.center_title > h3{
+	font-size : 35px;
+}
+
+/* 메인 반응형 시작 */
+@media (max-width : 1200px){
+	.main_wrapper{
+		background-position : top center;
+	}
+	.center_title{
+		height : 62%;
+	}
+	.center_title > h1 {
+		font-size : 70px;
+		color : #df9f9f;
+	}
+	.center_title > h3 {
+		font-size : 40px;
+	}
+}
+@media (max-width : 1000px){
+	.center_title{
+		height : 48%;
+	}
+	.center_title > h1 {
+		font-size : 50px;
+		color : #df9f9f;
+	}
+	.center_title > h3 {
+		font-size : 35px;
+	}
+}
+@media (max-width : 800px){
+	.center_title{
+		height : 100%;
+		justify-content: flex-start;
+		padding-top : 25px;
+	}
+	.center_title > h1 {
+		font-size : 30px;
+		color : #df9f9f;
+		
+	}
+	.center_title > h1:first-child{
+		margin-bottom : 0;
+	}
+	.center_title > h3 {
+		font-size : 25px;
+	}
+}
+@media (max-width : 600px){
+	.center_title{
+		display : none;
+	}
+}
+/* 메인 반응형 끝 */
+
+/* 메인 끝 */
