--- a/src/main/webapp/css/default.css
+++ b/src/main/webapp/css/default.css
@@ -26,9 +26,11 @@ ul > li > a{
 .img_box{
 	display : block;
 	width : 100%;
+	height: 100%;
 }
 .img_box > img{
 	width : 100%;
+	height: 100%;
 	display : inline-block;
 }
 .flex{
