--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -43,6 +43,12 @@
     font-weight: normal;
     font-style: normal;
 }
+@font-face {
+    font-family: 'GilbeotRainbow';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2112@1.0/GilbeotRainbow.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
 /* 폰트 끝 */
 
 /* 헤더 시작 */
@@ -51,6 +57,29 @@ body{
 }
 main {
 	position : relative;
+}
+.right_ball{
+	position : fixed;
+	top : 50%;
+	right : 100px;
+	display : flex;
+	flex-direction: column;
+	z-index:999;
+}
+.right_ball > a > div{
+	width : 17px;
+	height : 17px;
+	border-radius : 100%;
+	border: 4px solid #d99ded;
+	transition : background-color 0.6s;
+}
+.right_ball > a:hover > div,
+.right_ball > a > div.active
+{
+	background-color : #d99ded;
+}
+.right_ball > a:not(:first-child) > div{
+	margin-top : 22px;
 }
 header{
 	background-color : #FDF8FF;
@@ -111,7 +140,6 @@ header{
 	background-color : #5f5f5f;
 }
 .header > .header_sns {
-	width : 15%;
 	margin-left : 10%;
 }
 .header > .header_sns > ul{
@@ -131,6 +159,9 @@ header{
 }
 .header_sns > ul > li:first-child:hover > a{
 	color : #d929c4;
+}
+.header_sns > ul > li:nth-child(2):hover > a{
+	color : #f9e000;
 }
 .header_mobile {
 	display : none;
@@ -538,14 +569,16 @@ header{
 }
 #gallery > li {
 	position : relative;
+	overflow : hidden;
 }
 #gallery > li > span{
-	display : block;
+	display : inline-block;
 	position : absolute;
 	left : 50%;
 	top : 50%;
+	opacity :0;
+	width: 80%;
 	transform : translate(-50%, -50%);
-	opacity : 0;
 	transition : all 0.5s;
 	font-size : 20px;
 	cursor: pointer;
@@ -576,6 +609,11 @@ header{
 	display : block;
 	height : 300px;
 	width : 100%;
+}
+@media (max-width : 1000px){
+	#gallery > li > span {
+		font-size : 14px;
+	}
 }
 @media (max-width : 768px){
 	.portfolio_tit > h1{
@@ -636,7 +674,8 @@ header{
 	align-items: center;
 }
 .insta_popup_top > .insta_popup_title a{
-	color : white;	
+	color : white;
+	font-weight: 500;
 }
 .insta_popup_exit{
 	width : 10%;
