--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -159,6 +159,13 @@ header{
 .header .header_menu > ul > li > ul > li:hover {
 	background-color : #5f5f5f;
 }
+.header .header_pc .header_menu_downArrow{
+	font-size: 20px;
+	display : inline-block;
+	position : relative;
+	right : 7%;
+	bottom : 5%;
+}
 .header > .header_sns {
 	margin-left : 10%;
 }
@@ -218,6 +225,9 @@ header{
 	}	
 }
 @media (max-width : 1000px){
+	header{
+		opacity : 1;
+	}
 	.header_pc {
 		display: none;
 	}
@@ -242,7 +252,7 @@ header{
 		overflow : hidden;
 		width : 100%;
 		height : 100vh;
-		background-color : black;
+		background-color : #ECE5F4;
 	}
 	.header_mobile_menu{
 		flex-direction: column;
@@ -256,9 +266,12 @@ header{
 	.mobile_menu_top > .mobile_menu_lobo > div:first-child{
 		width : 20%;
 	}
+	.mobile_menu_top .mobile_menu_blank {
+		width : 15%;
+	}
 	.mobile_menu_top > .mobile_menu_logo{
 		font-family: 'twayair';
-		font-size : 30px;
+		font-size : 40px;
 		align-items: center;
 		justify-content: center;
 		color : #C6B6D5;
@@ -268,12 +281,35 @@ header{
 		font-size : 30px;
 		align-items: center;
 		justify-content: flex-end;
-		color : white;
-		width : 10%; 
+		color : black;
+		width : 15%; 
 	}
 	.mobile_menu_top > .mobile_menu_exit > span{
 		margin-right : 15px;
 		cursor: pointer;
+	}
+	.mobile_menu_middle > ul > li {
+		transition : all 0.4s;
+		position : relative;
+	}
+	.mobile_menu_middle > ul > li > a{
+		font-size :23px;
+		font-family : 'LotteMartHappy';
+	}
+	.mobile_menu_middle > ul > li:hover {
+		background-color : #DDDDFF;
+	}
+	.mobile_menu_middle > ul > li:hover > a{
+		color : #AE73D2;
+	}
+	.header_mobile ul .header_menu_downArrow{
+		position : absolute;
+		font-size : 20px;
+		display : inline-block;
+		right : 35%;
+		top : 40%;
+		transform : translate(-40%, -35%);
+		
 	}
 }
 
