--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -292,9 +292,10 @@ header{
 		transition : all 0.4s;
 		position : relative;
 	}
-	.mobile_menu_middle > ul > li > a{
+	.mobile_menu_middle > ul  li  a{
 		font-size :23px;
 		font-family : 'LotteMartHappy';
+		transition : color 0.4s;
 	}
 	.mobile_menu_middle > ul > li:hover {
 		background-color : #DDDDFF;
@@ -309,7 +310,25 @@ header{
 		right : 35%;
 		top : 40%;
 		transform : translate(-40%, -35%);
-		
+		transition : all 0.4s;
+	}
+	.header_mobile ul li.openSubMenu .header_menu_downArrow{
+		transform : rotate(180deg);
+	}
+	.header_mobile ul ul {
+		position : absolute;
+		top : 100%;
+		width : 100%;
+		height : 100%;		
+	}
+	.header_mobile ul > li > ul > li{
+		transition : 0.4s;
+	}
+	.header_mobile ul > li > ul > li:hover {
+		background-color : #AE73D2;
+	}
+	.header_mobile ul ul > li > a {
+		font-size : 18px;
 	}
 }
 
